[package]
name = "tobibox"
version = "0.1.0"
edition = "2024"
authors = ["Ryan <ryan@deltadevs.xyz>"]
license = "MIT"

[[bin]]
name = "tobibox"
test = false
bench = false

[dependencies]
embassy-embedded-hal = { version = "0.3.1", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.6.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
heapless = { version = "0.8", default-features = false }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = "0.5.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
log = "0.4.27"
mfrc522 = "0.8"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
